connection string change

--- a/JobHunterApp/Web.config
+++ b/JobHunterApp/Web.config
@@ -69,6 +69,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="JobHunterDBEntities" connectionString="metadata=res://*/Models.JobHunterModel.csdl|res://*/Models.JobHunterModel.ssdl|res://*/Models.JobHunterModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=thearnoldserver.database.windows.net;initial catalog=JobHunterDB;user id=Arnold;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="JobHunterDBEntities" connectionString="metadata=res://*/Models.JobHunterModel.csdl|res://*/Models.JobHunterModel.ssdl|res://*/Models.JobHunterModel.msl;provider=System.Data.SqlClient;provider connection string= &quot; Server=tcp:thearnoldserver.database.windows.net,1433;Initial Catalog=JobHunterDB;Persist Security Info=False;User ID=Arnold;Password=gundam123#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30 &quot;" />
   </connectionStrings>
 </configuration>
