--- a/JobHunterApp/JobHunterApp.csproj
+++ b/JobHunterApp/JobHunterApp.csproj
@@ -281,6 +281,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Sunglasses-Frames-PNG-Clipart.png" />
+    <Content Include="take your heart log.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
